# Backend/src/main/java/de/sophieherstein/chat_app_backend/chat/dto/DirectChatResponse.java
@@ -1,0 +1,8 @@
+package de.sophieherstein.chat_app_backend.chat.dto;
+
+import java.util.UUID;
+
+public record DirectChatResponse(
+        UUID chatId
+) {
+}
