# Backend/src/main/java/de/sophieherstein/chat_app_backend/chat/dto/MessageResponse.java
@@ -1,0 +1,13 @@
+package de.sophieherstein.chat_app_backend.chat.dto;
+
+import java.time.LocalDateTime;
+import java.util.UUID;
+
+public record MessageResponse(
+        UUID id,
+        UUID senderId,
+        String content,
+        LocalDateTime createdAt,
+        boolean read
+) {
+}
