# Backend/src/main/java/de/sophieherstein/chat_app_backend/chat/dto/SendMessageRequest.java
@@ -1,0 +1,13 @@
+package de.sophieherstein.chat_app_backend.chat.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+
+public record SendMessageRequest(
+
+        @NotBlank
+        @Size(max = 5000)
+        String content
+
+) {
+}
